# fscl-xutil-c

./: Dockerfile  README.md  meson.build  meson_options.txt
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd_docker.yml  ci_host_tester.yaml  ci_proj_builder.yaml
code/include/fossil/: xutil.h
code/include/fossil/xutil/: arguments.h  assume.h  bitwise.h  cnullptr.h  command.h  filesystem.h  lavalamp.h  money.h  platform.h  ranges.h  shuffle.h
code/include/trilobite/: module.h  xutil.h
code/include/trilobite/xutil/: arguments.h  assume.h  bitwise.h  cnullptr.h  command.h  directory.h  errors.h  filesystem.h  lavalamp.h  money.h  number.h  parser.h  platform.h  random.h  ranges.h  searchable.h  shuffle.h  sortable.h
code/source/: arguments.c  assume.c  bitwise.c  command.c  directory.c  errors.c  filesystem.c  lavalamp.c  meson.build  module.c  money.c  number.c  parser.c  platform.c  random.c  ranges.c  searchable.c  shuffle.c  sortable.c
demo/: demo_command.c  demo_directory.c  demo_errors.c  demo_money.c  demo_number.c  demo_parser.c  demo_prog.c  demo_random.c  meson.build
subprojects/: tscl-xtest-c.wrap
test/: meson.build  xtest_arguments.c  xtest_assume.c  xtest_cases.c  xtest_command.c  xtest_directory.c  xtest_errors.c  xtest_filesystem.c  xtest_lavalamp.c  xtest_money.c  xtest_number.c  xtest_parser.c  xtest_platform.c  xtest_random.c  xtest_ranges.c  xtest_searchable.c  xtest_shuffle.c  xtest_sortable.c  xunit_runner.c
